--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon src/app"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^6.0.1",
     "multer": "^1.4.3",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "socket.io": "^4.4.0"
   }
 }
