--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/node": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
     "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
